# schlock

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES  codecov.yml  context7.json  llms.txt  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rule_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  gt-approve.yml  labels.yml  release-please.yml  test.yml
commands/: setup.md  validate.md
data/: commit_filter_rules.yaml  formatting_tools.yaml  safety_rules.yaml
data/rules/: 00_whitelist.yaml  01_privilege_escalation.yaml  02_file_destruction.yaml  03_credential_theft.yaml  04_disk_operations.yaml  05_code_execution.yaml  06_network_security.yaml  07_container_security.yaml  08_system_modification.yaml  09_log_tampering.yaml  10_development_workflows.yaml  11_dynamic_linker.yaml  12_cloud_security.yaml  13_data_exfiltration.yaml  14_self_protection.yaml
docs/: CHANGELOG.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLING.md  QA_TOOLING.md  ROADMAP.md  RULES_ORGANIZATION.md
docs/specs/: 2026-07-21-native-parser-migration.md
hooks/: hooks.json  post_tool_use.py  pre_tool_use.py  self_protect.py  session_start.py
src/schlock/: __init__.py  exceptions.py
src/schlock/core/: __init__.py  cache.py  parser.py  rules.py  substitution.py  validator.py
src/schlock/integrations/: __init__.py  audit.py  commit_filter.py  shellcheck.py
src/schlock/setup/: __init__.py  config_writer.py  env_detector.py  wizard.py
tests/: accuracy.py  audit_cli.py  benchmark.py  conftest.py  rule_coverage.py  test_accuracy.py  test_anchored_keyword_false_positives.py  test_audit.py  test_audit_cli.py  test_audit_scrubbing.py  test_audit_thread_safety.py  test_benchmark.py  test_benchmarks.py  test_cache.py  test_cache_race_fix.py  test_commit_filter.py  test_config_writer.py  test_coverage_gaps.py  test_dangerous_commands.py  test_dangerous_constructs_validation.py  test_dev_null_false_positives.py  test_env_detector.py  test_find_exec_false_positives.py  test_hook_integration.py  test_kubectl_substitution.py  test_parser.py  test_pattern_coverage.py  test_performance.py  test_post_tool_use.py  test_real_integration.py  test_redos_fix.py  test_redos_protection.py  test_rule_coverage.py  test_rules.py  test_security_review_gaps.py  test_self_protect.py  test_shellcheck.py  test_string_literal_bypass.py  test_substitution.py  test_top_level_underblocks.py  (+4 more)
tools/schlock-parse/: build.sh  go.mod  main.go  main_test.go
tools/schlock-parse/testdata/: corpus.json
